Обновил меню для первого элемента навигации

--- a/app/index.html
+++ b/app/index.html
@@ -524,36 +524,268 @@
 							</button>
 						</div>
 
-						<div class="header__nav__item__menu">
-							<a href="#" class="header__intro__nav__item">
+						<div class="header__nav__item__menu header__nav__item__menu--list">
+							<div class="header__intro__nav__col">
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
 
-								<div class="header__intro__nav__item__wrapper">
-									<span class="header__intro__nav__text">
-										Букмекерские конторы
-									</span>
-								</div>
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="15" src="./images/dest/nav__list/ru.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Все букмекерские конторы России
+										</span>
+									</div>
 
-							</a>
+								</a>
 
-							<a href="#" class="header__intro__nav__item">
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
 
-								<div class="header__intro__nav__item__wrapper">
-									<span class="header__intro__nav__text">
-										Букмекерские конторы
-									</span>
-								</div>
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="15" src="./images/dest/nav__list/bo.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы Беларуси
+										</span>
+									</div>
 
-							</a>
+								</a>
 
-							<a href="#" class="header__intro__nav__item">
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
 
-								<div class="header__intro__nav__item__wrapper">
-									<span class="header__intro__nav__text">
-										Букмекерские конторы
-									</span>
-								</div>
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="19" src="./images/dest/nav__list/house.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Топ 10 букмекерских контор
+										</span>
+									</div>
 
-							</a>
+								</a>
+
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="15" src="./images/dest/nav__list/ua.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы Украины
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="15" src="./images/dest/nav__list/ru.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы России<br>
+											по коэффициентам
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/gift.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы по бонусам
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="19" src="./images/dest/nav__list/desktop.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы с ЦУПИС
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="15" src="./images/dest/nav__list/aword.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы с лицензией
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="18" height="25" src="./images/dest/nav__list/mouse.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы с киберспортом
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="21" height="23" src="./images/dest/nav__list/medal.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Официальные букмекерские конторы
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/lattice.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы по ширине линии
+										</span>
+									</div>
+
+								</a>
+							</div>
+
+							<div class="header__intro__nav__col">
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="17" height="20" src="./images/dest/nav__list/apple.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские приложения на Айфон
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="18" height="20" src="./images/dest/nav__list/android.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы с Android
+											приложениями
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/new.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Новые букмекерские конторы
+										</span>
+									</div>
+
+								</a>
+
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="15" src="./images/dest/nav__list/ru.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Надежные букмекерские конторы России
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/fifeandone.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Ставки на лотереи
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/star.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы для профессионалов
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/earth.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы мира
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="20" src="./images/dest/nav__list/live.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские конторы с Live ставками
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="20" height="17" src="./images/dest/nav__list/partners.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Букмекерские тотализаторы
+										</span>
+									</div>
+
+								</a>
+
+								<a href="#" class="header__intro__nav__item header__intro__nav__item--flex">
+
+									<div class="header__intro__nav__item__wrapper">
+										<img loading="lazy" width="21" height="23" src="./images/dest/nav__list/bests.svg" alt="icon"
+											class="header__intro__nav__icon">
+										<span class="header__intro__nav__text">
+											Лучшие капперы
+										</span>
+									</div>
+
+								</a>
+							</div>
+
+
 						</div>
 					</div>
 
