Добавил новый блок с логотипами и сайдбар

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,6 @@
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="./css/app.min.css">
-	<link rel="stylesheet" href="./css/index.css">
 	<title>Title</title>
 </head>
 
@@ -1845,6 +1844,7 @@
 								</div>
 
 								<div class="best__info">
+
 									<div class="row">
 										<div class="best__info__col col-12 col-lg-4">
 											<h2 class="best__info__title">
@@ -2461,6 +2461,306 @@
 
 					<div class="whole__right col-9">
 
+						<div class="companies__logos__title inner__title">
+							Регистрация в букмекерских компаниях
+						</div>
+						<section class="whole__section companies__logos">
+							<div class="whole__section__wrapper">
+								<div class="companies__logos__header">
+									<div class="row">
+										<div class=" col-md-6 col-12">
+											<div class="row">
+
+												<div class="companies__logos__inner col-6">
+													<picture decoding="async">
+														<source type="image/webp" srcset="images/dest/logos/phone--mobile.webp"
+															media="(max-width: 767px)">
+														<source srcset="images/dest/logos/phone--mobile.png" media="(max-width: 767px)">
+														<source type="image/webp" srcset="images/dest/logos/phone.webp">
+														<img class="companies__logos__phone" width="177" height="206"
+															src="images/dest/logos/phone.pmg" alt="img" loading="lazy">
+													</picture>
+
+												</div>
+
+												<div class="companies__logos__inner col-6">
+													<div class="row">
+
+														<div class="companies__logos__item__box col-12">
+															<a href="#" class="companies__logos__item">
+																<img class="companies__logos__img" width="130" height="20"
+																	src="images/dest/logos/1x.svg" alt="img" loading="lazy">
+																<span class="companies__logos__name">
+																	БК 1хСтавка
+																</span>
+															</a>
+														</div>
+
+														<div class="companies__logos__item__box col-12">
+															<a href="#" class="companies__logos__item">
+																<img class="companies__logos__img" width="132" height="43"
+																	src="images/dest/logos/parimatch.svg" alt="img" loading="lazy">
+																<span class="companies__logos__name">
+																	БК Париматч
+																</span>
+															</a>
+														</div>
+													</div>
+												</div>
+
+
+											</div>
+										</div>
+
+										<div class=" col-md-6 col-12">
+											<div class="row">
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="130" height="28" src="images/dest/logos/leon.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Леон
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="126" height="31"
+															src="images/dest/logos/winline.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Винлайн
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="129" height="43"
+															src="images/dest/logos/liga_stavok.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Лига ставок
+														</span>
+													</a>
+												</div>
+											</div>
+										</div>
+
+
+									</div>
+								</div>
+
+								<div class="companies__logos__body">
+									<div class="row">
+										<div class=" col-md-6 col-12">
+											<div class="row">
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="117" height="44" src="images/dest/logos/888.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															888 - инструкция
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="166" height="26" src="images/dest/logos/ggbet.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК ggbet
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="130" height="288"
+															src="images/dest/logos/tennisi.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Тенниси
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="130" height="26"
+															src="images/dest/logos/betboom.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК БетБум
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="130" height="21"
+															src="images/dest/logos/mstbet.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК МостБет
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="126" height="31"
+															src="images/dest/logos/winline.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Винлайн
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="129" height="46" src="images/dest/logos/zenit.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Зенит
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="130" height="28" src="images/dest/logos/leon.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Леон
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="135" height="39"
+															src="images/dest/logos/marathon.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Марафон
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="132" height="43"
+															src="images/dest/logos/parimatch.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Париматч
+														</span>
+													</a>
+												</div>
+
+											</div>
+										</div>
+
+										<div class=" col-md-6 col-12">
+											<div class="row">
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="164" height="24"
+															src="images/dest/logos/betcity.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Бетсити
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="161" height="35"
+															src="images/dest/logos/olimpbet.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Олимп
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="120" height="39" src="images/dest/logos/pinup.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Пин Ап
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="132" height="28"
+															src="images/dest/logos/fonbet.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Фонбет
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="129" height="25"
+															src="images/dest/logos/bettery.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Беттери
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="123" height="30" src="images/dest/logos/365.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															Bet365
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="130" height="20" src="images/dest/logos/1x.svg"
+															alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК 1хСтавка
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="102" height="53"
+															src="images/dest/logos/baltbet.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БалтБет
+														</span>
+													</a>
+												</div>
+
+												<div class="companies__logos__item__box col-6">
+													<a href="#" class="companies__logos__item">
+														<img class="companies__logos__img" width="129" height="43"
+															src="images/dest/logos/liga_stavok.svg" alt="img" loading="lazy">
+														<span class="companies__logos__name">
+															БК Лига ставок
+														</span>
+													</a>
+												</div>
+											</div>
+										</div>
+
+
+									</div>
+
+								</div>
+							</div>
+
+
+						</section>
+
 						<section class="whole__section prognosis">
 
 							<div class="prognosis__head">
@@ -2697,6 +2997,7 @@
 											</div>
 										</div>
 									</div>
+
 									<div class="prognosis__item col-4">
 										<div class="prognosis__item__wrapper">
 											<picture decoding="async">
