Правалидировал страницу inner.html

--- a/app/inner.html
+++ b/app/inner.html
@@ -959,7 +959,6 @@
 
           <div class="whole__left whole__left--mobile col-lg-3 col-12">
 
-
             <div class="sidebar__new__list">
               <div class="sidebar__new__title">
                 Официальные БК в России
@@ -1003,7 +1002,7 @@
                               src="images/dest/sidebar__new/search.svg" alt="img" loading="lazy">
                           </a>
 
-                          <a href="#" target="_blank" type="button" class="sidebar__new__btn sidebar__new__btn--violet">
+                          <a href="#" target="_blank" class="sidebar__new__btn sidebar__new__btn--violet">
                             <img class="sidebar__new__btn__icon" width="22" height="22"
                               src="images/dest/sidebar__new/web.svg" alt="img" loading="lazy">
                           </a>
@@ -1372,116 +1371,6 @@
 
                 </div>
 
-                <!-- <div class="sidebar__new__box">
-
-
-                  <div class="sidebar__new__body sidebar__new__body--special sidebar__new__body--transparent">
-                    <div class="sidebar__new__body__wrapper">
-                      <div class="sidebar__new__body__line">
-
-                        <a href="#" target="_blank"  class="sidebar__new__number sidebar__new__number--big sidebar__new__number--orange">
-                          58
-                        </a>
-
-                        <a href="#" target="_blank"  class="sidebar__new__present sidebar__new__present--transparent">
-                          <div class="sidebar__new__present__gift">
-                            <img class="sidebar__new__present__icon" width="24" height="24"
-                              src="images/dest/sidebar__new/gift.svg" alt="img" loading="lazy">
-                          </div>
-                          <div class="sidebar__new__present__content">
-                            <div class="sidebar__new__present__content__wrapper">
-                              <div class="sidebar__new__present__price">
-                                2 000 RUB
-                              </div>
-                              <div class="sidebar__new__present__text">
-                                Получи бонус
-                              </div>
-                            </div>
-                          </div>
-                        </a>
-
-                      </div>
-
-                      <div class="sidebar__new__body__line">
-
-                        <a href="#" target="_blank"  class="sidebar__new__logo__link">
-                          <img class="sidebar__new__logo" width="121" height="39"
-                            src="images/dest/sidebar__new/parimatch.svg" alt="img" loading="lazy">
-                        </a>
-
-                        <div class="sidebar__new__rating">
-                          <img src="./images/dest/news/star.svg" alt="star" class="official__star">
-                          <a href="#" target="_blank"  class="official__reviews__value">
-                            123 отзыва
-                          </a>
-                        </div>
-
-                        <div class="sidebar__new__btns">
-                          <a href="#" target="_blank"  class="sidebar__new__btn">
-                            <img class="sidebar__new__btn__icon" width="22" height="22"
-                              src="images/dest/sidebar__new/search.svg" alt="img" loading="lazy">
-                          </a>
-                        </div>
-
-
-                      </div>
-
-                      <div class="sidebar__new__body__line">
-
-                        <a href="#" target="_blank"  class="sidebar__new__number sidebar__new__number--big sidebar__new__number--orange">
-                          58
-                        </a>
-
-                        <a href="#" target="_blank"  class="sidebar__new__present sidebar__new__present--transparent">
-                          <div class="sidebar__new__present__gift">
-                            <img class="sidebar__new__present__icon" width="24" height="24"
-                              src="images/dest/sidebar__new/gift.svg" alt="img" loading="lazy">
-                          </div>
-                          <div class="sidebar__new__present__content">
-                            <div class="sidebar__new__present__content__wrapper">
-                              <div class="sidebar__new__present__price">
-                                2 000 RUB
-                              </div>
-                              <div class="sidebar__new__present__text">
-                                Получи бонус
-                              </div>
-                            </div>
-                          </div>
-                        </a>
-
-                      </div>
-
-                      <div class="sidebar__new__body__line">
-                        <a href="#" target="_blank"  class="sidebar__new__logo__link">
-                          <img class="sidebar__new__logo" width="121" height="39"
-                            src="images/dest/sidebar__new/parimatch.svg" alt="img" loading="lazy">
-                        </a>
-
-
-                        <div class="sidebar__new__rating">
-                          <img src="./images/dest/news/star.svg" alt="star" class="official__star">
-                          <a href="#" target="_blank"  class="official__reviews__value">
-                            123 отзыва
-                          </a>
-                        </div>
-
-                        <div class="sidebar__new__btns">
-                          <a href="#" target="_blank"  class="sidebar__new__btn">
-                            <img class="sidebar__new__btn__icon" width="22" height="22"
-                              src="images/dest/sidebar__new/search.svg" alt="img" loading="lazy">
-                          </a>
-                        </div>
-
-
-                      </div>
-                    </div>
-
-
-
-
-                  </div>
-                </div> -->
-
                 <div class="sidebar__new__collection">
 
 
@@ -1615,7 +1504,7 @@
                           </div>
                         </a>
 
-                        <a href="#" target="_blank" type="button" class="sidebar__new__btn sidebar__new__btn--violet">
+                        <a href="#" target="_blank" class="sidebar__new__btn sidebar__new__btn--violet">
                           <img class="sidebar__new__btn__icon" width="22" height="22"
                             src="images/dest/sidebar__new/web.svg" alt="img" loading="lazy">
                         </a>
@@ -1634,8 +1523,6 @@
 
 
             </div>
-
-
 
           </div>
 
@@ -1782,7 +1669,7 @@
             <div class="companies__logos__title inner__title">
               Регистрация в букмекерских компаниях
             </div>
-            <section class="whole__section companies__logos">
+            <div class="whole__section companies__logos">
               <div class="whole__section__wrapper">
                 <div class="companies__logos__header">
                   <div class="row">
@@ -2077,7 +1964,7 @@
               </div>
 
 
-            </section>
+            </div>
 
           </div>
         </div>
