Слегка оптимизировал код

--- a/app/inner.html
+++ b/app/inner.html
@@ -991,21 +991,24 @@
                     </div>
                     <div class="sidebar__new__body">
                       <div class="sidebar__new__body__wrapper">
-                        <a href="#" target="_blank" class="sidebar__new__logo__link sidebar__new__logo__link--violet">
-                          <img class="sidebar__new__logo" width="128" height="19" src="images/dest/sidebar__new/1x.svg"
-                            alt="img" loading="lazy">
-                        </a>
 
-                        <div class="sidebar__new__btns">
-                          <a href="#" target="_blank" class="sidebar__new__btn sidebar__new__btn--blue">
-                            <img class="sidebar__new__btn__icon" width="22" height="22"
-                              src="images/dest/sidebar__new/search.svg" alt="img" loading="lazy">
+                        <div class="sidebar__new__body__line">
+                          <a href="#" target="_blank" class="sidebar__new__logo__link sidebar__new__logo__link--violet">
+                            <img class="sidebar__new__logo" width="128" height="19"
+                              src="images/dest/sidebar__new/1x.svg" alt="img" loading="lazy">
                           </a>
 
-                          <a href="#" target="_blank" class="sidebar__new__btn sidebar__new__btn--violet">
-                            <img class="sidebar__new__btn__icon" width="22" height="22"
-                              src="images/dest/sidebar__new/web.svg" alt="img" loading="lazy">
-                          </a>
+                          <div class="sidebar__new__btns">
+                            <a href="#" target="_blank" class="sidebar__new__btn sidebar__new__btn--blue">
+                              <img class="sidebar__new__btn__icon" width="22" height="22"
+                                src="images/dest/sidebar__new/search.svg" alt="img" loading="lazy">
+                            </a>
+
+                            <a href="#" target="_blank" class="sidebar__new__btn sidebar__new__btn--violet">
+                              <img class="sidebar__new__btn__icon" width="22" height="22"
+                                src="images/dest/sidebar__new/web.svg" alt="img" loading="lazy">
+                            </a>
+                          </div>
                         </div>
                       </div>
 
@@ -1019,6 +1022,7 @@
                 </div>
 
                 <div class="sidebar__new__collection">
+
                   <div class="sidebar__new sidebar__new--toggle sidebar__new--simple">
                     <div class="sidebar__new__wrapper">
                       <div class="sidebar__new__head">
