Добавил шапку для таблицы на мобидьной версии

--- a/app/inner.html
+++ b/app/inner.html
@@ -2000,21 +2000,26 @@
                       </div>
 
                       <div class="bookmaker__table__wrapper">
-                        <div class="bookmaker__table__header no-md">
+                        <div class="bookmaker__table__header">
                           <div class="bookmaker__table__grid">
-                            <div class="bookmaker__table__col">
+
+                            <div class="bookmaker__table__col no-xl md">
+                              С Мобильного
+                            </div>
+
+                            <div class="bookmaker__table__col no-md">
                               Букмекер
                             </div>
 
-                            <div class="bookmaker__table__col bookmaker__table__col--center">
+                            <div class="bookmaker__table__col bookmaker__table__col--center no-md">
                               Бонус/акция
                             </div>
 
-                            <div class="bookmaker__table__col bookmaker__table__col--center">
+                            <div class="bookmaker__table__col bookmaker__table__col--center no-md">
                               Apps
                             </div>
 
-                            <div class="bookmaker__table__col bookmaker__table__col--center">
+                            <div class="bookmaker__table__col bookmaker__table__col--center no-md">
                               Регистрация
                             </div>
                           </div>
