Добавил страницу rating2

--- a/app/rating.html
+++ b/app/rating.html
@@ -1639,7 +1639,8 @@
 
 
                       <div class="rating__nav__tabs">
-                        <a href="#" class="rating__nav__tabs__item rating__nav__tabs__item--1">
+                        <a href="#"
+                          class="rating__nav__tabs__item rating__nav__tabs__item--active rating__nav__tabs__item--1">
                           <span></span>
                         </a>
 
