--- a/app/rating2.html
+++ b/app/rating2.html
@@ -1861,60 +1861,63 @@
                               <img class="office__item__logo__img" width="148" height="32"
                                 src="images/dest/logos/leon.svg" alt="leon" loading="lazy">
                             </a>
-                          </div>
-
-                          <div class="office__item__description">
-                            <div class="office__item__description__item">
-                              <span class="office__item__description__left">
-                                Язык сайта:
-                              </span>
-
-                              <span class="office__item__description__right">
-                                Русский
-                              </span>
-                            </div>
-
-                            <div class="office__item__description__item office__item__description__item--bonus">
-                              <span class="office__item__description__left">
-                                Бонус:
-                              </span>
 
 
-                              <a href="#" class="office__item__description__right office__item__description__bonus">
-                                <img width="20" height="21" src="images/dest/rating/gift.svg" alt="gift" loading="lazy">
-                                10 000 ₽
-                              </a>
-                            </div>
+                            <div class="office__item__description">
+                              <div class="office__item__description__item">
+                                <span class="office__item__description__left">
+                                  Язык сайта:
+                                </span>
 
-                            <div class="office__item__description__item">
-                              <span class="office__item__description__left">
-                                Приложения:
-                              </span>
+                                <span class="office__item__description__right">
+                                  Русский
+                                </span>
+                              </div>
 
-                              <span class="office__item__description__right office__item__description__apps">
-                                <a href="#"
-                                  class="office__item__description__app office__item__description__app--apple">
-                                  <span></span>
+                              <div class="office__item__description__item office__item__description__item--bonus">
+                                <span class="office__item__description__left">
+                                  Бонус:
+                                </span>
+
+
+                                <a href="#" class="office__item__description__right office__item__description__bonus">
+                                  <img width="20" height="21" src="images/dest/rating/gift.svg" alt="gift"
+                                    loading="lazy">
+                                  10 000 ₽
                                 </a>
+                              </div>
 
-                                <a href="#" class="office__item__description__app office__item__description__app--play">
-                                  <span></span>
-                                </a>
+                              <div class="office__item__description__item">
+                                <span class="office__item__description__left">
+                                  Приложения:
+                                </span>
+
+                                <span class="office__item__description__right office__item__description__apps">
+                                  <a href="#"
+                                    class="office__item__description__app office__item__description__app--apple">
+                                    <span></span>
+                                  </a>
+
+                                  <a href="#"
+                                    class="office__item__description__app office__item__description__app--play">
+                                    <span></span>
+                                  </a>
 
 
-                              </span>
-                            </div>
+                                </span>
+                              </div>
 
-                            <div class="office__item__description__item office__item__description__item--rating">
-                              <span class="office__item__description__left">
-                                Общая оценка:
-                              </span>
+                              <div class="office__item__description__item office__item__description__item--rating">
+                                <span class="office__item__description__left">
+                                  Общая оценка:
+                                </span>
 
-                              <span class="office__item__description__right office__item__description__rating">
-                                <img width="25" height="25" loading="lazy" src="./images/dest/rating/circle.svg"
-                                  alt="rating">
-                                <span class="best__table__rating__text">97</span>
-                              </span>
+                                <span class="office__item__description__right office__item__description__rating">
+                                  <img width="25" height="25" loading="lazy" src="./images/dest/rating/circle.svg"
+                                    alt="rating">
+                                  <span class="best__table__rating__text">97</span>
+                                </span>
+                              </div>
                             </div>
                           </div>
 
@@ -2162,60 +2165,63 @@
                               <img class="office__item__logo__img" width="138" height="44"
                                 src="images/dest/logos/parimatch.svg" alt="parimatch" loading="lazy">
                             </a>
-                          </div>
-
-                          <div class="office__item__description">
-                            <div class="office__item__description__item">
-                              <span class="office__item__description__left">
-                                Язык сайта:
-                              </span>
-
-                              <span class="office__item__description__right">
-                                Русский
-                              </span>
-                            </div>
-
-                            <div class="office__item__description__item office__item__description__item--bonus">
-                              <span class="office__item__description__left">
-                                Бонус:
-                              </span>
 
 
-                              <a href="#" class="office__item__description__right office__item__description__bonus">
-                                <img width="20" height="21" src="images/dest/rating/gift.svg" alt="gift" loading="lazy">
-                                10 000 ₽
-                              </a>
-                            </div>
+                            <div class="office__item__description">
+                              <div class="office__item__description__item">
+                                <span class="office__item__description__left">
+                                  Язык сайта:
+                                </span>
 
-                            <div class="office__item__description__item">
-                              <span class="office__item__description__left">
-                                Приложения:
-                              </span>
+                                <span class="office__item__description__right">
+                                  Русский
+                                </span>
+                              </div>
 
-                              <span class="office__item__description__right office__item__description__apps">
-                                <a href="#"
-                                  class="office__item__description__app office__item__description__app--apple">
-                                  <span></span>
+                              <div class="office__item__description__item office__item__description__item--bonus">
+                                <span class="office__item__description__left">
+                                  Бонус:
+                                </span>
+
+
+                                <a href="#" class="office__item__description__right office__item__description__bonus">
+                                  <img width="20" height="21" src="images/dest/rating/gift.svg" alt="gift"
+                                    loading="lazy">
+                                  10 000 ₽
                                 </a>
+                              </div>
 
-                                <a href="#" class="office__item__description__app office__item__description__app--play">
-                                  <span></span>
-                                </a>
+                              <div class="office__item__description__item">
+                                <span class="office__item__description__left">
+                                  Приложения:
+                                </span>
+
+                                <span class="office__item__description__right office__item__description__apps">
+                                  <a href="#"
+                                    class="office__item__description__app office__item__description__app--apple">
+                                    <span></span>
+                                  </a>
+
+                                  <a href="#"
+                                    class="office__item__description__app office__item__description__app--play">
+                                    <span></span>
+                                  </a>
 
 
-                              </span>
-                            </div>
+                                </span>
+                              </div>
 
-                            <div class="office__item__description__item office__item__description__item--rating">
-                              <span class="office__item__description__left">
-                                Общая оценка:
-                              </span>
+                              <div class="office__item__description__item office__item__description__item--rating">
+                                <span class="office__item__description__left">
+                                  Общая оценка:
+                                </span>
 
-                              <span class="office__item__description__right office__item__description__rating">
-                                <img width="25" height="25" loading="lazy" src="./images/dest/rating/circle.svg"
-                                  alt="rating">
-                                <span class="best__table__rating__text">97</span>
-                              </span>
+                                <span class="office__item__description__right office__item__description__rating">
+                                  <img width="25" height="25" loading="lazy" src="./images/dest/rating/circle.svg"
+                                    alt="rating">
+                                  <span class="best__table__rating__text">97</span>
+                                </span>
+                              </div>
                             </div>
                           </div>
 
@@ -2463,62 +2469,66 @@
                               <img class="office__item__logo__img" width="144" height="29"
                                 src="images/dest/logos/betboom.svg" alt="betboom" loading="lazy">
                             </a>
+
+
+                            <div class="office__item__description">
+                              <div class="office__item__description__item">
+                                <span class="office__item__description__left">
+                                  Язык сайта:
+                                </span>
+
+                                <span class="office__item__description__right">
+                                  Русский
+                                </span>
+                              </div>
+
+                              <div class="office__item__description__item office__item__description__item--bonus">
+                                <span class="office__item__description__left">
+                                  Бонус:
+                                </span>
+
+
+                                <a href="#" class="office__item__description__right office__item__description__bonus">
+                                  <img width="20" height="21" src="images/dest/rating/gift.svg" alt="gift"
+                                    loading="lazy">
+                                  10 000 ₽
+                                </a>
+                              </div>
+
+                              <div class="office__item__description__item">
+                                <span class="office__item__description__left">
+                                  Приложения:
+                                </span>
+
+                                <span class="office__item__description__right office__item__description__apps">
+                                  <a href="#"
+                                    class="office__item__description__app office__item__description__app--apple">
+                                    <span></span>
+                                  </a>
+
+                                  <a href="#"
+                                    class="office__item__description__app office__item__description__app--play">
+                                    <span></span>
+                                  </a>
+
+
+                                </span>
+                              </div>
+
+                              <div class="office__item__description__item office__item__description__item--rating">
+                                <span class="office__item__description__left">
+                                  Общая оценка:
+                                </span>
+
+                                <span class="office__item__description__right office__item__description__rating">
+                                  <img width="25" height="25" loading="lazy" src="./images/dest/rating/circle.svg"
+                                    alt="rating">
+                                  <span class="best__table__rating__text">97</span>
+                                </span>
+                              </div>
+                            </div>
                           </div>
 
-                          <div class="office__item__description">
-                            <div class="office__item__description__item">
-                              <span class="office__item__description__left">
-                                Язык сайта:
-                              </span>
-
-                              <span class="office__item__description__right">
-                                Русский
-                              </span>
-                            </div>
-
-                            <div class="office__item__description__item office__item__description__item--bonus">
-                              <span class="office__item__description__left">
-                                Бонус:
-                              </span>
-
-
-                              <a href="#" class="office__item__description__right office__item__description__bonus">
-                                <img width="20" height="21" src="images/dest/rating/gift.svg" alt="gift" loading="lazy">
-                                10 000 ₽
-                              </a>
-                            </div>
-
-                            <div class="office__item__description__item">
-                              <span class="office__item__description__left">
-                                Приложения:
-                              </span>
-
-                              <span class="office__item__description__right office__item__description__apps">
-                                <a href="#"
-                                  class="office__item__description__app office__item__description__app--apple">
-                                  <span></span>
-                                </a>
-
-                                <a href="#" class="office__item__description__app office__item__description__app--play">
-                                  <span></span>
-                                </a>
-
-
-                              </span>
-                            </div>
-
-                            <div class="office__item__description__item office__item__description__item--rating">
-                              <span class="office__item__description__left">
-                                Общая оценка:
-                              </span>
-
-                              <span class="office__item__description__right office__item__description__rating">
-                                <img width="25" height="25" loading="lazy" src="./images/dest/rating/circle.svg"
-                                  alt="rating">
-                                <span class="best__table__rating__text">97</span>
-                              </span>
-                            </div>
-                          </div>
 
                           <div class="office__item__reviews">
                             <span class="office__item__reviews__text">
